--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -1,7 +1,9 @@
 ---
+apply.png: apply-6278c4449c2efe9fc08cc3f167a5077e.png
+apply/index.png: apply-6278c4449c2efe9fc08cc3f167a5077e.png
 rails.png: rails-a3386665c05a2d82f711a4aaa72d247c.png
 rails/index.png: rails-a3386665c05a2d82f711a4aaa72d247c.png
-application.js: application-7bf7880c16bf465dd4091edb2c2f700d.js
-application/index.js: application-7bf7880c16bf465dd4091edb2c2f700d.js
-application.css: application-1b13569e9620782f423d4cd3ce931750.css
-application/index.css: application-1b13569e9620782f423d4cd3ce931750.css
+application.js: application-41ae39f5439af9d838a36d4f483a0e6f.js
+application/index.js: application-41ae39f5439af9d838a36d4f483a0e6f.js
+application.css: application-aa145ab1d3b62b2f417ed4468e6409e5.css
+application/index.css: application-aa145ab1d3b62b2f417ed4468e6409e5.css
