vendor compile assets

--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -7,3 +7,5 @@ application.js: application-83b98dc1ccf841c5b2fa142e59126b53.js
 application/index.js: application-83b98dc1ccf841c5b2fa142e59126b53.js
 application.css: application-e2d9def201426fee178947cb48023a7c.css
 application/index.css: application-e2d9def201426fee178947cb48023a7c.css
+style.css: style-53cf12ca0a4ef852b4bde7b861dfc445.css
+style/index.css: style-53cf12ca0a4ef852b4bde7b861dfc445.css
