--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -5,7 +5,23 @@ rails.png: rails-a3386665c05a2d82f711a4aaa72d247c.png
 rails/index.png: rails-a3386665c05a2d82f711a4aaa72d247c.png
 application.js: application-83b98dc1ccf841c5b2fa142e59126b53.js
 application/index.js: application-83b98dc1ccf841c5b2fa142e59126b53.js
+bootstrap.js: bootstrap-cf1c17d79f063d6877a2f7231ab74726.js
+bootstrap/index.js: bootstrap-cf1c17d79f063d6877a2f7231ab74726.js
+ga.js: ga-a184780652b0b9fed2862069d2b2d04a.js
+ga/index.js: ga-a184780652b0b9fed2862069d2b2d04a.js
+helper.js: helper-04990aefaa36acec9471db819895469d.js
+helper/index.js: helper-04990aefaa36acec9471db819895469d.js
+modernizr.custom.js: modernizr.custom-d8256539cf994d11984b6d35ea013311.js
+modernizr/index.custom.js: modernizr.custom-d8256539cf994d11984b6d35ea013311.js
+plugins.js: plugins-28247337465625c36eac45851e0c9002.js
+plugins/index.js: plugins-28247337465625c36eac45851e0c9002.js
+webfont.js: webfont-43227a12d77ab99447338877cc2a2a12.js
+webfont/index.js: webfont-43227a12d77ab99447338877cc2a2a12.js
+wfl.js: wfl-ef1c794cb00c1271deb87ff7852c8051.js
+wfl/index.js: wfl-ef1c794cb00c1271deb87ff7852c8051.js
 application.css: application-e2d9def201426fee178947cb48023a7c.css
 application/index.css: application-e2d9def201426fee178947cb48023a7c.css
+bootstrap.css: bootstrap-07ddf084f64140fb0af3a028460c9368.css
+bootstrap/index.css: bootstrap-07ddf084f64140fb0af3a028460c9368.css
 style.css: style-53cf12ca0a4ef852b4bde7b861dfc445.css
 style/index.css: style-53cf12ca0a4ef852b4bde7b861dfc445.css
