vendor compiled assets

--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -3,8 +3,8 @@ apply.png: apply-6278c4449c2efe9fc08cc3f167a5077e.png
 apply/index.png: apply-6278c4449c2efe9fc08cc3f167a5077e.png
 rails.png: rails-a3386665c05a2d82f711a4aaa72d247c.png
 rails/index.png: rails-a3386665c05a2d82f711a4aaa72d247c.png
-application.js: application-83b98dc1ccf841c5b2fa142e59126b53.js
-application/index.js: application-83b98dc1ccf841c5b2fa142e59126b53.js
+application.js: application-41ae39f5439af9d838a36d4f483a0e6f.js
+application/index.js: application-41ae39f5439af9d838a36d4f483a0e6f.js
 bootstrap.js: bootstrap-cf1c17d79f063d6877a2f7231ab74726.js
 bootstrap/index.js: bootstrap-cf1c17d79f063d6877a2f7231ab74726.js
 ga.js: ga-a184780652b0b9fed2862069d2b2d04a.js
@@ -23,11 +23,13 @@ webfont.js: webfont-43227a12d77ab99447338877cc2a2a12.js
 webfont/index.js: webfont-43227a12d77ab99447338877cc2a2a12.js
 wfl.js: wfl-ef1c794cb00c1271deb87ff7852c8051.js
 wfl/index.js: wfl-ef1c794cb00c1271deb87ff7852c8051.js
-application.css: application-e2d9def201426fee178947cb48023a7c.css
-application/index.css: application-e2d9def201426fee178947cb48023a7c.css
-bootstrap.css: bootstrap-07ddf084f64140fb0af3a028460c9368.css
-bootstrap/index.css: bootstrap-07ddf084f64140fb0af3a028460c9368.css
-style.css: style-53cf12ca0a4ef852b4bde7b861dfc445.css
-style/index.css: style-53cf12ca0a4ef852b4bde7b861dfc445.css
+application.css: application-15dce2f8469cfc1457558a44a06b0110.css
+application/index.css: application-15dce2f8469cfc1457558a44a06b0110.css
+bootstrap.css: bootstrap-40fce2584a38eb57d5e7a2b7a00344f7.css
+bootstrap/index.css: bootstrap-40fce2584a38eb57d5e7a2b7a00344f7.css
 jquery.js: jquery-cb3c546a4be04739c4581adee5f8abe3.js
 jquery/index.js: jquery-cb3c546a4be04739c4581adee5f8abe3.js
+glyphicons-halflings-white.png: glyphicons-halflings-white-6cccd17a7aed91dbc0157d343c68c0d9.png
+glyphicons-halflings-white/index.png: glyphicons-halflings-white-6cccd17a7aed91dbc0157d343c68c0d9.png
+glyphicons-halflings.png: glyphicons-halflings-2851b489e8c39f8fad44fc10efb99c3e.png
+glyphicons-halflings/index.png: glyphicons-halflings-2851b489e8c39f8fad44fc10efb99c3e.png
