--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -23,10 +23,12 @@ webfont.js: webfont-43227a12d77ab99447338877cc2a2a12.js
 webfont/index.js: webfont-43227a12d77ab99447338877cc2a2a12.js
 wfl.js: wfl-ef1c794cb00c1271deb87ff7852c8051.js
 wfl/index.js: wfl-ef1c794cb00c1271deb87ff7852c8051.js
-application.css: application-15dce2f8469cfc1457558a44a06b0110.css
-application/index.css: application-15dce2f8469cfc1457558a44a06b0110.css
+application.css: application-518a90fb8b6cd81e94d3fb5b28b18f0f.css
+application/index.css: application-518a90fb8b6cd81e94d3fb5b28b18f0f.css
 bootstrap.css: bootstrap-40fce2584a38eb57d5e7a2b7a00344f7.css
 bootstrap/index.css: bootstrap-40fce2584a38eb57d5e7a2b7a00344f7.css
+style.css: style-032c7405af7fa3f6528dc4ec5f808504.css
+style/index.css: style-032c7405af7fa3f6528dc4ec5f808504.css
 jquery.js: jquery-cb3c546a4be04739c4581adee5f8abe3.js
 jquery/index.js: jquery-cb3c546a4be04739c4581adee5f8abe3.js
 glyphicons-halflings-white.png: glyphicons-halflings-white-6cccd17a7aed91dbc0157d343c68c0d9.png
